fixed dots position on mobile/tablet/small desktop

--- a/src/components/carousel/relatedProjects.scss
+++ b/src/components/carousel/relatedProjects.scss
@@ -6,6 +6,10 @@ $dots-offset-bottom: 40px;
   position: relative;
   padding-top: 20px;
 
+  @media (min-width: $phone-max) and (max-width: $desktop-max) {
+    margin-bottom: $dots-offset-bottom /2;
+  }
+
   &__results {
     header {
       margin-bottom: 10px;
